// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`md5.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 248,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 252,
                              "sval": {
                                "sval": "",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 248,
                      },
                    },
                    "location": 256,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 258,
                        "sval": {
                          "sval": "d41d8cd98f00b204e9800998ecf8427e",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "a",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 18,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 20,
                        "sval": {
                          "sval": "0cc175b9c0f1b6a831c399e269772661",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "abc",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 20,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 22,
                        "sval": {
                          "sval": "900150983cd24fb0d6963f7d28e17f72",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "message digest",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 31,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 33,
                        "sval": {
                          "sval": "f96b697d7cb7938d525a2f31aaf161d0",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "abcdefghijklmnopqrstuvwxyz",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 43,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 45,
                        "sval": {
                          "sval": "c3fcd3d76192e4007dfb496cca67e13b",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 79,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 81,
                        "sval": {
                          "sval": "d174ab98d277d9f5a5611c2c9f419d9f",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "12345678901234567890123456789012345678901234567890123456789012345678901234567890",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 97,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 99,
                        "sval": {
                          "sval": "57edf4a22be3c955ac49da2e2107b67a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "",
                                  },
                                },
                              },
                              "location": 15,
                              "typeName": {
                                "location": 17,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 24,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 26,
                        "sval": {
                          "sval": "d41d8cd98f00b204e9800998ecf8427e",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "a",
                                  },
                                },
                              },
                              "location": 16,
                              "typeName": {
                                "location": 18,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 25,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 27,
                        "sval": {
                          "sval": "0cc175b9c0f1b6a831c399e269772661",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "abc",
                                  },
                                },
                              },
                              "location": 18,
                              "typeName": {
                                "location": 20,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 27,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 29,
                        "sval": {
                          "sval": "900150983cd24fb0d6963f7d28e17f72",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "message digest",
                                  },
                                },
                              },
                              "location": 29,
                              "typeName": {
                                "location": 31,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 38,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 40,
                        "sval": {
                          "sval": "f96b697d7cb7938d525a2f31aaf161d0",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "abcdefghijklmnopqrstuvwxyz",
                                  },
                                },
                              },
                              "location": 41,
                              "typeName": {
                                "location": 43,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 50,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 52,
                        "sval": {
                          "sval": "c3fcd3d76192e4007dfb496cca67e13b",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789",
                                  },
                                },
                              },
                              "location": 77,
                              "typeName": {
                                "location": 79,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 86,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 88,
                        "sval": {
                          "sval": "d174ab98d277d9f5a5611c2c9f419d9f",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`md5.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "TRUE",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 13,
                                  "sval": {
                                    "sval": "12345678901234567890123456789012345678901234567890123456789012345678901234567890",
                                  },
                                },
                              },
                              "location": 95,
                              "typeName": {
                                "location": 97,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "bytea",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "md5",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 104,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 106,
                        "sval": {
                          "sval": "57edf4a22be3c955ac49da2e2107b67a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
